# m5stack-linux-dtoverlays

./: .gitignore  .gitmodules  Makefile  README.md
doc/: README.md
doc/CoreMP135/: 1.1产品开箱上电.md  1.2系统烧录.md  1.3系统登陆.md  1.4硬件接口说明.md  1.5资源下载.md  1产品简介.md  2.1网络配置.md  2.2系统更新.md  2.3自启动配置.md  2系统配置项.md  3.1开发环境搭建.md  3.2C-C++程序示例.md  3.4kernel编译.md  3.5boot编译.md  3.6rootfs编译.md  3.7linux外设使用.md  3产品开发.md  CoreMP135.md
doc/cm4stack/: CM4Stack.md  kernel编译.md
doc/linux/: Future_plan.md  M5StackLinuxLibs.md  cm4stack&atomS3&sensor_interaction_for_nodered.md
doc/unitv3/: 1产品简介.md  ax620AI训练.md
examples/Lvgl/Basic/: CMakeLists.txt  README.md  lv_drv_conf.h  main.cpp  tick.h
examples/Lvgl/Basic/lv_porting/: CMakeLists.txt  lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h
examples/QT/: CMakeLists.txt  README.md  qml.qrc
firmware/CardputerZero/: config.txt  rc.local
firmware/Cm4Stack/: config.txt
modules/CardputerZero/: Makefile  cardputerzero-overlay.dts  config.md
modules/aw882xx/: Makefile  READE.md  README.md
modules/bmi270/: Makefile  bmi270.h  bmi270_core.c  bmi270_i2c.c  bmi270_overlay.dts  bmi270_spi.c
modules/bq27220/: Makefile  bat.py  bq27220.dts  bq27xxx_battery.c  bq27xxx_battery.h  bq27xxx_battery_hdq.c  bq27xxx_battery_i2c.c
modules/bq27220-1.0/: bq27220.dts  bq27xxx_battery.c  bq27xxx_battery.h  bq27xxx_battery_i2c.c  dkms.conf
modules/es8389/: Makefile  es8389.h  es8389_m5stack.dts
modules/es8389-1.0/: Makefile  dkms.conf  es8389_m5stack.c
modules/m5stack-cm4/: Makefile  (+1 more)
update/: coremp135.json  update.sh
(+84 files in other folders)
